Cleaned up build, switched to specs, restructured files and the same three tests that were failing in test::unit are now failing in rspec in exactly the same way. And I removed Loggable (there was no gemspec dep anyways) and have replaced it with simple Logger.

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This is a fork of http://github.com/fizx/thread_pool
+_____________________
 This code is still pretty early, and not yet used in production.  That said, I am interested in feedback.  You can send me a message on GitHub's internal messaging system ( http://github.com/inbox/new/fizx ).
 
 A simple executor-style ThreadPool for Ruby (with tests, yay!)
